<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flowers17"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_200x200" />

    <EditText
        android:id="@+id/login_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:background="@drawable/input_design"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_username_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints=""
        android:background="@drawable/input_design"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/darkgrey"
        android:textColorHint="@color/darkgrey"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginLeft="17dp"
            android:gravity="center_vertical"
            android:text="@string/remember_me"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:buttonTint="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:text="@string/admin"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp" />

    <TextView
        android:id="@+id/no_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_btn"
        android:text="@string/no_admin"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="80dp"
        android:visibility="invisible"/>

</RelativeLayout>