<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flowers4"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/register_applogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_200x200" />

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_applogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design_lightgrey"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design_lightgrey"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/darkgrey"
        android:textColorHint="@color/darkgrey"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/register_password_repeat_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design_lightgrey"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/darkgrey"
        android:textColorHint="@color/darkgrey"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_repeat_input"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <com.rey.material.widget.CheckBox
            android:id="@+id/accept_terms_checkbox"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17sp"
            android:layout_marginLeft="17sp"
            android:gravity="center_vertical"
            android:text="@string/accept_terms"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cbd_strokeColor="@color/colorPrimary" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
</RelativeLayout>